--- a/ApiProjeKampi.WebUI/Views/Shared/Components/_SidebarAdminLayoutComponentPartial/Default.cshtml
+++ b/ApiProjeKampi.WebUI/Views/Shared/Components/_SidebarAdminLayoutComponentPartial/Default.cshtml
@@ -15,6 +15,7 @@
       <li class="dropdown"><a href="~/Product/ProductList" class="nav-link"><i data-feather="package"></i><span>Ürünler</span></a></li>
       <li class="dropdown"><a href="~/Feature/FeatureList" class="nav-link"><i data-feather="cast"></i><span>Öne Çıkan Alan</span></a></li>
       <li class="dropdown"><a href="~/About/AboutList" class="nav-link"><i data-feather="feather"></i><span>Hakkımızda Alan</span></a></li>
+      <li class="dropdown"><a href="~/WhyYummy/WhyYummyList" class="nav-link"><i data-feather="github"></i><span>Neden Yummy</span></a></li>
     </ul>
   </aside>
 </div>
