--- a/ApiProjeKampi.WebUI/Views/Shared/Components/_SidebarAdminLayoutComponentPartial/Default.cshtml
+++ b/ApiProjeKampi.WebUI/Views/Shared/Components/_SidebarAdminLayoutComponentPartial/Default.cshtml
@@ -16,6 +16,7 @@
       <li class="dropdown"><a href="~/Feature/FeatureList" class="nav-link"><i data-feather="cast"></i><span>Öne Çıkan Alan</span></a></li>
       <li class="dropdown"><a href="~/About/AboutList" class="nav-link"><i data-feather="feather"></i><span>Hakkımızda Alan</span></a></li>
       <li class="dropdown"><a href="~/WhyYummy/WhyYummyList" class="nav-link"><i data-feather="github"></i><span>Neden Yummy</span></a></li>
+      <li class="dropdown"><a href="~/Testimonial/TestimonialList" class="nav-link"><i data-feather="aperture"></i><span>Müşteri Yorumları</span></a></li>
     </ul>
   </aside>
 </div>
