--- a/ApiProjeKampi.WebUI/Views/Shared/Components/_SidebarAdminLayoutComponentPartial/Default.cshtml
+++ b/ApiProjeKampi.WebUI/Views/Shared/Components/_SidebarAdminLayoutComponentPartial/Default.cshtml
@@ -17,6 +17,9 @@
       <li class="dropdown"><a href="~/About/AboutList" class="nav-link"><i data-feather="feather"></i><span>Hakkımızda Alan</span></a></li>
       <li class="dropdown"><a href="~/WhyYummy/WhyYummyList" class="nav-link"><i data-feather="github"></i><span>Neden Yummy</span></a></li>
       <li class="dropdown"><a href="~/Testimonial/TestimonialList" class="nav-link"><i data-feather="aperture"></i><span>Müşteri Yorumları</span></a></li>
+      <li class="dropdown"><a href="~/YummyEvent/YummyEventList" class="nav-link"><i data-feather="activity"></i><span>Etkinlikler</span></a></li>
+      <li class="dropdown"><a href="~/Chef/ChefList" class="nav-link"><i data-feather="users"></i><span>Şefler</span></a></li>
+      <li class="dropdown"><a href="~/YummyEvent/YummyEventList" class="nav-link"><i data-feather="phone-call"></i><span>Rezervasyonlar</span></a></li>
     </ul>
   </aside>
 </div>
