--- a/ApiProjeKampi.WebUI/Views/Shared/Components/_SidebarAdminLayoutComponentPartial/Default.cshtml
+++ b/ApiProjeKampi.WebUI/Views/Shared/Components/_SidebarAdminLayoutComponentPartial/Default.cshtml
@@ -20,6 +20,8 @@
       <li class="dropdown"><a href="~/YummyEvent/YummyEventList" class="nav-link"><i data-feather="activity"></i><span>Etkinlikler</span></a></li>
       <li class="dropdown"><a href="~/Chef/ChefList" class="nav-link"><i data-feather="users"></i><span>Şefler</span></a></li>
       <li class="dropdown"><a href="~/YummyEvent/YummyEventList" class="nav-link"><i data-feather="phone-call"></i><span>Rezervasyonlar</span></a></li>
+      <li class="dropdown"><a href="~/Gallery/ImageList" class="nav-link"><i data-feather="image"></i><span>Galeri</span></a></li>
+      <li class="dropdown"><a href="~/Contact/ContactList" class="nav-link"><i data-feather="phone"></i><span>İletişim Bilgileri</span></a></li>
     </ul>
   </aside>
 </div>
