--- a/ApiProjeKampi.WebUI/Views/Shared/Components/_SidebarAdminLayoutComponentPartial/Default.cshtml
+++ b/ApiProjeKampi.WebUI/Views/Shared/Components/_SidebarAdminLayoutComponentPartial/Default.cshtml
@@ -22,6 +22,7 @@
       <li class="dropdown"><a href="~/YummyEvent/YummyEventList" class="nav-link"><i data-feather="phone-call"></i><span>Rezervasyonlar</span></a></li>
       <li class="dropdown"><a href="~/Gallery/ImageList" class="nav-link"><i data-feather="image"></i><span>Galeri</span></a></li>
       <li class="dropdown"><a href="~/Contact/ContactList" class="nav-link"><i data-feather="phone"></i><span>İletişim Bilgileri</span></a></li>
+      <li class="dropdown"><a href="~/Message/MessageList" class="nav-link"><i data-feather="phone"></i><span>Gelen Mesajlar</span></a></li>
     </ul>
   </aside>
 </div>
