--- a/ApiProjeKampi.WebUI/Views/Message/MessageList.cshtml
+++ b/ApiProjeKampi.WebUI/Views/Message/MessageList.cshtml
@@ -36,9 +36,9 @@
                                     <td>@item.Email</td>
                                     <td>@item.Subject</td>
                                     <td>@item.SendDate.ToString("dd-MMM-yyyy")</td>
-                                    <td><a href="~/Message/DeleteMessage/@item.MessageId" class="btn btn-danger">Detay</a></td>
+                                    <td><a href="~/Message/AnswerMessageWithOpenAI/@item.MessageId" class="btn btn-warning">Detay</a></td>
                                     <td><a href="~/Message/DeleteMessage/@item.MessageId" class="btn btn-danger">Sil</a></td>
-                                    <td><a href="~/Message/UpdateMessage/@item.MessageId" class="btn btn-warning">Güncelle</a></td>
+                                    <td><a href="~/Message/UpdateMessage/@item.MessageId" class="btn btn-success">Güncelle</a></td>
                                 </tr>
                             }
                             </tbody>
