Hugging Face Helsinki Dil Modeli ile Yapay Zeka Üzerinden Çeviri İşlemi

--- a/ApiProjeKampi.WebUI/Views/Message/SendMessage.cshtml
+++ b/ApiProjeKampi.WebUI/Views/Message/SendMessage.cshtml
@@ -21,6 +21,10 @@
         </div>
 
         <div class="col-md-12 text-center">
+            <div class="loading">YÜkleniyor</div>
+            <div class="error-message"></div>
+            <div class="sent-message">Mesajınız başarıyla gönderildi! Teşekkür Ederiz :)</div>
+
             <button type="submit">Mesajı Gönder</button>
         </div>
 
