--- a/ApiProjeKampi.WebUI/Views/Shared/Components/_ServiceDefaultComponentPartial/Default.cshtml
+++ b/ApiProjeKampi.WebUI/Views/Shared/Components/_ServiceDefaultComponentPartial/Default.cshtml
@@ -9,7 +9,7 @@
                 Yummy’de sadece yemek değil, bir deneyim sunuyoruz. Doğal ve katkısız malzemelerle hazırladığımız menülerimiz, hijyenik koşullarda servis edilir. Herkesin damak zevkine uygun seçeneklerimizle kendinizi özel hissedin.
               </p>
               <div class="text-center">
-                <a href="#" class="more-btn"><span>Learn More</span> <i class="bi bi-chevron-right"></i></a>
+                <a href="#contact" class="more-btn"><span>Rezervasyon Yapınız</span> <i class="bi bi-chevron-right"></i></a>
               </div>
             </div>
           </div>
