--- a/ApiProjeKampi.WebUI/Views/Default/Index.cshtml
+++ b/ApiProjeKampi.WebUI/Views/Default/Index.cshtml
@@ -1,4 +1,4 @@
-@model dynamic
+@model ApiProjeKampi.WebUI.Dtos.RezervationDtos.CreateRezervationDto
 
 @{
     Layout = null;
@@ -36,48 +36,48 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Book A Table</h2>
-        <p><span>Book Your</span> <span class="description-title">Stay With Us<br></span></p>
+        <h2>Rezervasyon Paneli</h2>
+        <p><span>Sizleri Ağırlamak İçin</span> <span class="description-title">Sabırsızlanıyoruz<br></span></p>
       </div><!-- End Section Title -->
 
       <div class="container">
 
         <div class="row g-0" data-aos="fade-up" data-aos-delay="100">
 
-          <div class="col-lg-4 reservation-img" style="background-image: url(assets/img/reservation.jpg);"></div>
+          <div class="col-lg-4 reservation-img" style="background-image: url(/yummy-red-1.0.0/assets/img/reservation.jpg);"></div>
 
           <div class="col-lg-8 d-flex align-items-center reservation-form-bg" data-aos="fade-up" data-aos-delay="200">
-            <form action="forms/book-a-table.php" method="post" role="form" class="php-email-form">
+            <form method="post" role="form" class="php-email-form">
               <div class="row gy-4">
                 <div class="col-lg-4 col-md-6">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required="">
+                  <input type="text" asp-for="NameSurname" class="form-control" id="name" placeholder="Adınız Soyadınız" required="">
                 </div>
                 <div class="col-lg-4 col-md-6">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required="">
+                  <input type="email" class="form-control" asp-for="Email" id="Email" placeholder="Email Adresiniz" required="">
                 </div>
                 <div class="col-lg-4 col-md-6">
-                  <input type="text" class="form-control" name="phone" id="phone" placeholder="Your Phone" required="">
+                  <input type="text" class="form-control" asp-for="PhoneNumber" id="PhoneNumber" placeholder="Telefon Numaranız" required="">
                 </div>
                 <div class="col-lg-4 col-md-6">
-                  <input type="date" name="date" class="form-control" id="date" placeholder="Date" required="">
+                  <input type="date" asp-for="Date" class="form-control" id="date" placeholder="Rezervasyon Tarihiniz" required="">
                 </div>
                 <div class="col-lg-4 col-md-6">
-                  <input type="time" class="form-control" name="time" id="time" placeholder="Time" required="">
+                  <input type="time" class="form-control" asp-for="Time" id="time" placeholder="Rezervasyon Saati" required="">
                 </div>
                 <div class="col-lg-4 col-md-6">
-                  <input type="number" class="form-control" name="people" id="people" placeholder="# of people" required="">
+                  <input type="number" class="form-control" asp-for="CountOfPeople" id="people" placeholder="Kişi Sayısı" required="">
                 </div>
               </div>
 
               <div class="form-group mt-3">
-                <textarea class="form-control" name="message" rows="5" placeholder="Message"></textarea>
+                <textarea class="form-control" asp-for="Message" rows="5" placeholder="Eklemek İstedikleriniz"></textarea>
               </div>
 
               <div class="text-center mt-3">
                 <div class="loading">Loading</div>
                 <div class="error-message"></div>
-                <div class="sent-message">Your booking request was sent. We will call back or send an Email to confirm your reservation. Thank you!</div>
-                <button type="submit">Book a Table</button>
+                <div class="sent-message">Rezervasyon talebiniz alınmıştır. Ekip arkadaşlarımız telefon yada e-mail üzerinden dönüş yapacaktır.</div>
+                <button type="submit">Rezervasyon Oluştur</button>
               </div>
             </form>
           </div><!-- End Reservation Form -->
